--- a/CarritoCompras/WebForm/Site.Master
+++ b/CarritoCompras/WebForm/Site.Master
@@ -31,14 +31,24 @@
 <body>
     <form runat="server">
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
-    
-                    <ul class="horizontal">
-                        <li><a runat="server" href="~/">Inicio</a></li>
-                        <li><a runat="server" href="~/Contact">Contacto</a></li>
-                        <li><a runat="server" href="~/Articulos">Articulos</a></li>
-                    </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="Default.aspx">Heroski</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navMenu">
+                <div class="navbar-nav">
+                    <a class="btn btn-info" href="Default.aspx">Inicio<span class="sr-only">(current)</span></a>
+                    <a class="btn btn-info" href="Articulos.aspx">Articulos</a>
+                    <a class="btn btn-info" href="Chango.aspx">Contacto</a>
                 </div>
+            </div>
+            <nav class="navbar navbar-light bg-light" style="float: right;">
+                <a class="navbar-brand" href="Chango.aspx">
+                    <img src="https://images.vexels.com/media/users/3/200097/isolated/preview/942820836246f08c2d6be20a45a84139-icono-de-carrito-de-compras-carrito-de-compras-by-vexels.png" width="80" height="80" alt="Sin imagen de carrito">
+                </a>
+            </nav>
+        </nav>
 
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
