--- a/CarritoCompras/WebForm/Site.Master
+++ b/CarritoCompras/WebForm/Site.Master
@@ -24,28 +24,30 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
+            zoom:-50%;
         }
     </style>
 
 </head>
 <body>
-    <form runat="server">
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <form runat="server" style="margin-bottom:0px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-radius: 50px;">
             <a class="navbar-brand" href="Default.aspx">Herosky</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navMenu">
                 <div class="navbar-nav">
-                    <a class="btn btn-dark" href="Default.aspx">Inicio<span class="sr-only">(current)</span></a>
-                    <a class="btn btn-dark" href="Articulos.aspx">Articulos</a>
-                    <a class="btn btn-dark" href="Contact.aspx">Contacto</a>
+                    <div class="btn btn-group">
+                        <a class="btn btn-dark" href="Default.aspx">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="btn btn-dark" href="Articulos.aspx">Articulos</a>
+                        <a class="btn btn-dark" href="Contact.aspx">Contacto</a>
+                    </div>
                 </div>
             </div>
             <nav class="navbar navbar-light bg-light" style="float: right;">
                 <a class="navbar-brand" href="Chango.aspx">
-                    <img src="https://image.flaticon.com/icons/png/512/107/107831.png" width="80" height="80" alt="Sin imagen de carrito">
+                    <img src="https://image.flaticon.com/icons/png/512/107/107831.png" width="80" height="80" alt="imagen de carrito">
                 </a>
             </nav>
         </nav>
@@ -56,7 +58,7 @@
 
             <footer>
                 <hr />
-                <p style="color:white">&copy; <%: DateTime.Now.Year %> - Herosky</p>
+                <p style="color: white">&copy; <%: DateTime.Now.Year %> - Herosky</p>
             </footer>
         </div>
 
